# vulkango

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  buffer.go  cabac_hevc.go  command.go  command_clear.go  conversions.go  descriptor.go  device.go  font.go  go.mod  go.sum  image.go  imageview.go  instance.go  main.go  pipeline.go  shader.go  sparse.go  surface.go  swapchain.go  swapchain_helper.go  sync.go  types.go  video.go  video_encoder.go  video_encoder_h265.go  video_encoder_h265_hw.go  video_h264.go  video_h265.go  vulkango.cpp  vulkango.h
examples/: examples  shaders.go  test  test.go
ffmpeggo/: encoder.go  gen_reference.go  go.mod  test_color32  test_color32.go  test_encoder  test_encoder.go  test_simple.go
ffmpeggo/avcodec/: cabac.go  codec.go  dct.go  hevc_encoder.go  residual.go
ffmpeggo/avformat/: mp4.go  muxer.go
ffmpeggo/avutil/: bitstream.go  frame.go  packet.go  types.go
ffmpeggo/cmd/test/: main.go
shaderc/: shaderc.go
vala/: CLAUDE.md  FRAMEBUFFER_IMPLEMENTATION_PLAN.md  gemini_chat.html  go.mod  go.sum  layer_actions.go  vala  vala.go  vala.go.backup  vala.go.bak  vala.go.ffr
vala/canvas/: SPARSE_ROADMAP.md  USAGE.md  canvas.go  dense.go  sparse.go
vala/ecs/: components.go  query.go  world.go
vala/font/: sdf.go  shaders.go
vala/shaders/: clear.comp
vala/systems/: render.go  text.go  ui.go
